# ai-plugins

./: .gitignore  .lycheeignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  README.md  go.mod  lefthook.yml  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml
cmd/check-markdown/: main.go
cmd/check-naming/: main.go
cmd/validate-plugins/: main.go
plugins/agent-skills/: CHANGELOG.md  go.mod
plugins/agent-skills/.claude-plugin/: plugin.json
plugins/agent-skills/scripts/: validate_skills.py
plugins/agent-skills/skills/: ATTRIBUTION.md
plugins/engineering-principles/: CHANGELOG.md  CONTRIBUTING.md  behavioural-rules.md
plugins/engineering-principles/.claude-plugin/: plugin.json
plugins/engineering-principles/hooks/: hooks.json  session-manifest.txt
plugins/engineering-principles/patterns/: adr-template.md  architecture-tests.md  circuit-breaker-setup.md  clean-architecture-scaffold.md  error-responses.md  event-driven-outbox.md  feature-flag-rollback.md  graceful-degradation.md  idempotency.md  new-dependency-adr.md  non-breaking-changes.md  observability-baseline.md  pagination.md  (+3 more)
tools/check-markdown/: main.go  main_test.go  mdcheck.go
tools/check-naming/: main.go  main_test.go
tools/mdcheck/: mdcheck.go  mdcheck_test.go
tools/namecheck/: namecheck.go  namecheck_test.go
tools/plugincheck/: plugincheck.go  plugincheck_test.go
tools/validate-plugins/: main.go  main_test.go
(+28 files in other folders)
