[project]
name = "ai-plugins"
version = "1.0.0" # x-release-please-version
description = "Tooling for the ai-plugins monorepo (pre-commit, lint, link check, plugin validation)."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["plugins/engineering-principles/scripts"]
testpaths = ["plugins/engineering-principles/tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# Defaults (E4, E7, E9, F) plus import order, modern-syntax upgrades,
# and the banned-API rule that rejects __future__ imports.
extend-select = ["I", "UP", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations".msg = "Not needed — Python is pinned to 3.14+ (PEP 649 defers annotations by default)."
